--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8989
+server.port=5490
 server.servlet.context-path=/app
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://37.194.208.131:8989/postgres
+spring.datasource.url=jdbc:postgresql://37.194.208.131:8989/postgres?currentSchema=market
 spring.datasource.username=postgres
 spring.datasource.password=123123
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
